<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.movie.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:autoPlay="false"
            app:layout_constraintCircleRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showFullScreenButton="false" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_detail"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_view">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/img_poster"
                android:scaleType="centerCrop"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="573dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/montserrat"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/card_detail"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />

        <TextView
            android:id="@+id/years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/years"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_realease"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_detail"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />

        <TextView
            android:id="@+id/tv_realease"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/card_detail"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintStart_toEndOf="@+id/card_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_realease" />

        <TextView
            android:id="@+id/tv_overview_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/overview"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_detail" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:fontFamily="@font/montserrat"
            android:justificationMode="inter_word"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_title"
            tools:targetApi="o" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/detail_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>